--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "email": "mentor@icron.org"
         },
         {
-            "name": "Vitalya Kudla",
+            "name": "Vitalya Kudla"
         }
     ],
     "require": {
