--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2":"~2.0.0",
+        "yiisoft/yii2":"2.0.5",
         "yiisoft/yii2-bootstrap":"~2.0.0"
     },
     "require-dev": {
