--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,8 +1,38 @@
 filter:
-  excluded_paths: [tests/*],
+    excluded_paths: [tests/*]
 checks:
-  php:
-    code_rating: true
-    remove_extra_empty_lines: true
-    remove_php_closing_tag: true
-    remove_trailing_whitespace: true
+    php:
+        code_rating: true
+        remove_extra_empty_lines: true
+        remove_php_closing_tag: true
+        remove_trailing_whitespace: true
+        fix_use_statements:
+            remove_unused: true
+            preserve_multiple: false
+            preserve_blanklines: true
+            order_alphabetically: true
+        fix_php_opening_tag: true
+        fix_linefeed: true
+        fix_line_ending: true
+        fix_identation_4spaces: true
+        fix_doc_comments: true
+tools:
+    external_code_coverage:
+        timeout: 600
+        runs: 1
+    # Модуль для провекри качества кода https://scrutinizer-ci.com/docs/tools/php/php-analyzer/
+    php_analyzer: true
+    php_code_coverage: false
+    php_code_sniffer:
+        config:
+            standard: PSR2
+        filter:
+            paths: ['src']
+    # модуль для быстрого анализа и подсчета элементов в структуре приложения (комментарии, классы, методы и пр.)
+    php_loc:
+        enabled: true
+        excluded_dirs: [vendor, tests]
+    # модуль определения копипаст кода
+    php_cpd:
+        enabled: true
+        excluded_dirs: [vendor, tests]
