--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "yiisoft/yii2-bootstrap":"~2.0.0"
     },
     "require-dev": {
-        "phpunit/unit":"4.*"
+        "phpunit/phpunit": "4.*"
     },
     "autoload": {
         "psr-4": {
