Добавли jquery.cookie

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     ],
     "require": {
         "yiisoft/yii2":"2.0.5",
-        "yiisoft/yii2-bootstrap":"~2.0.0"
+        "yiisoft/yii2-bootstrap":"~2.0.0",
+        "bower-asset/jquery.cookie":"1.4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
